--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
     <title>Simple PWA</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/app.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>My Simple PWA</h1>
-    </header>
-    <main>
-        <p>Welcome to your simple Progressive Web App!</p>
-        <button id="installBtn">Install App</button>
-    </main>
+    <div id="app">
+        <h1>Welcome to My PWA!</h1>
+        <button id="notifyBtn">Show Notification</button>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
