--- a/videotrimmer.html
+++ b/videotrimmer.html
@@ -3,26 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" src="styles.css">
   <title>Video Trimmer with Separate Buttons</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    video {
-      width: 100%;
-      max-width: 600px;
-      margin-bottom: 20px;
-    }
-    input, button {
-      margin: 5px;
-    }
-    button {
-      padding: 10px 20px;
-      margin-top: 10px;
-    }
-  </style>
 </head>
 <body>
   <h1>Video Trimmer</h1>
